--- a/ss7_design_web/exercise/layout.html
+++ b/ss7_design_web/exercise/layout.html
@@ -29,15 +29,52 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" style="color: white">Contract</a>
+                        <a class="nav-link disabled" style="color: white" href="#">Contract</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <a class="nav-link disabled" style="color: white"><i class="fa-solid fa-arrow-right-to-bracket"></i>Login</a>
+                    <a class="nav-link disabled" style="color: white" href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i>&ensp;Login</a>
                 </form>
             </div>
         </div>
     </nav>
+</div>
+<div class="row">
+    <div class="col-2 " style="background: lightgrey"   >
+        <a style="text-decoration: none;margin-left: 80px" href="" tex>Link</a>
+        <br>
+        <a style="text-decoration:none;margin-left: 80px" href="">Link</a>
+        <br>
+        <a style="text-decoration:none;margin-left: 80px" href="">Link</a>
+    </div>
+    <div class="col-8 ">
+        <h1>Welcome</h1>
+        <br>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit ,sed do eiusmod tempor incididunt ut labore et <br>
+            dolore magna allqua .Ut enim ad minim veniam , quis nostrud exercitation ullaamco laboris nisi ut aliquip ex ea<br>
+            commodo consequat.Excepteur sint occaecat cupidatat no proident ,sunt in culpa qui officia deserunt <br>
+            mollit anim id est laborum consecteur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore <br>
+            magna alliqua .Ut enim and minim veniam ,quis nostrud exercitation ullamco laboris nisi ut alliquip ex ea <br>
+            commodo consequat.
+        </p>
+    </div>
+    <div class="col-2" style="background: lightgrey">
+        <div class="card" style="width: 12rem;margin-right: 50px">
+            <div class="card-body">
+                <h5 class="card-title" style="margin-left: 50px">ADS</h5>
+            </div>
+        </div>
+        <br>
+        <div class="card" style="width: 12rem;">
+            <div class="card-body">
+                <h5 class="card-title" style="margin-left: 50px">ADS</h5>
+            </div>
+        </div>
+    </div>
+</div>
+<div >
+    <p style="text-align: center;background: black;color: white;height: 40px">Footer</p>
 </div>
 </body>
 </html>
