--- a/ss6_CSS/exercise/dip_css/inline.html
+++ b/ss6_CSS/exercise/dip_css/inline.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Inline</title>
 </head>
 <body>
 <h1 style="color: darkgreen"> This is a heading 1 </h1>
