--- a/ss6_CSS/exercise/text_css/text.html
+++ b/ss6_CSS/exercise/text_css/text.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Định dạng văn bản</title>
 </head>
 <body>
 <h1>Việt Nam</h1>
