--- a/ss6_CSS/exercise/dip_css/external/external.html
+++ b/ss6_CSS/exercise/dip_css/external/external.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>External</title>
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
